--- a/plugins/onepage-scroll/onepage-scroll.css
+++ b/plugins/onepage-scroll/onepage-scroll.css
@@ -30,7 +30,7 @@ body, .onepage-wrapper, html {
 
 .onepage-pagination {
   position: absolute;
-  right: 10px;
+  left: 20px;
   top: 50%;
   z-index: 5;
   list-style: none;
@@ -42,7 +42,7 @@ body, .onepage-wrapper, html {
   text-align: center;
 }
 .onepage-pagination li a{
-  padding: 10px;
+  padding: 20px;
   width: 4px;
   height: 4px;
   display: block;
