--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -28,3 +28,42 @@ font-face {
 	font-style: normal;
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?2edc29');
+  src:  url('fonts/icomoon.eot?2edc29#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?2edc29') format('truetype'),
+    url('fonts/icomoon.woff?2edc29') format('woff'),
+    url('fonts/icomoon.svg?2edc29#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-cat:before {
+  content: "\e900";
+}
+.icon-cont:before {
+  content: "\e901";
+}
+.icon-home:before {
+  content: "\e902";
+}
+.icon-video:before {
+  content: "\e903";
+}
