--- a/style.css
+++ b/style.css
@@ -105,6 +105,10 @@ body {
 .logo img {
 	width: 100%;
 }
+.logo svg {
+	color: white;
+	background-color: green;
+}
 .header_phone {
 	display: flex;
 	margin-top: auto;
@@ -350,6 +354,7 @@ hr {
 	margin-bottom: 0;
 }
 .view_more {
+	cursor: pointer;
 	display: flex;
 	padding: 14px 18px;
 	border: 1px solid #C3C3C3;
@@ -526,7 +531,6 @@ hr {
 }
 footer {
 	width: 100%;
-	min-height: 400px;
 	position: absolute;
 	bottom: 0;
 }
@@ -546,13 +550,20 @@ footer {
 }*/
 .footer {
 	width: 100%;
-	padding: 80px 80px 40px 80px;
+	padding: 70px 80px 40px 80px;
 	box-sizing: border-box;
-	height: 400px;
 	border-bottom: 1px solid #202020;
 	display: flex;
 	justify-content: space-between;
 	color: white;
+}
+.footer_copyright {
+	padding: 20px 0 20px 80px;
+	opacity: 0.3;
+	color: white;
+	font-size: 12px;
+	font-family: 'Conv_RobotoRegular';
+
 }
 .footer_caption {
 	font-size: 18px
@@ -561,7 +572,7 @@ footer {
 	width: 300px;
 }
 .footer_logo img {
-	width: 280px;
+	width: 250px;
 }
 .footer_logo p {
 	margin-top: 20px;
@@ -630,19 +641,134 @@ footer {
 }
 .main_scroll {
 	position: absolute;
-	left: 20px;
+	left: 120px;
 	top: 50%;
 	z-index: 5;
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	margin-top: -82px;
 }
-.scroll_c {
+.scroll_c a {
 	width: 40px;
 	height: 40px;
-	background-color: green;
+	background-color: #B0B0B0;
 	margin-bottom: 1px;	
+	display: block;
+	text-align: center;
 }
-.scroll_c:hover {
-	background-color: blue;
+.scroll_c a:hover {
+	background-color: #707070;
+	border-left: 1px solid #fdb900;
+}
+.scroll_c a:hover .icon_custom {
+	color: white;
+}
+
+.scroll_c .icon_custom {
+	font-size: 24px;
+	color: #333333;
+	line-height: 40px;
+	position: relative;
+}
+.icon_description {
+	position: absolute;
+	top: 0px;
+	left: 39px;
+	background-color: #707070a8;
+	font-size: 12px;
+	color: white;
+	padding: 0 20px;
+	box-sizing: border-box;
+	width: 110px;
+	display: none;
+}
+.scroll_c a:hover .icon_description {
+	display: block;
+}
+.onepage-pagination a:before {
+	display: none;
+}
+.onepage-pagination li a {
+	padding: 0;
+	width: 40px;
+	height: 40px;
+	box-sizing: border-box;
+}
+.onepage-pagination {
+	margin-top: -82px;
+}
+.active .icon_custom {
+	color: white;
+}
+a.active {
+	background-color: #707070;
+	border-left: 1px solid #fdb900;
+}
+
+.popup_wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 99;
+}
+.popup {
+	padding: 28px 0 20px;
+	width: 412px;
+	box-sizing: border-box;
+	position: relative;
+	color: #333333;
+	background-color: white;
+}
+.popup_form {
+	display: flex;
+	flex-direction: column;
+	margin-top: 20px;
+	padding: 0 42px;
+}
+.popup_form input {
+	border: 1px solid #80808052;
+	padding: 0 10px;
+	margin-bottom: 16px;
+	width: 100%;
+	height: 44px;
+	box-sizing: border-box;
+}
+.popup_form textarea {
+	border: 1px solid #80808052;
+	padding: 10px;
+	margin-bottom: 16px;
+	width: 100%;
+	box-sizing: border-box;
+	resize: none;
+	height: 120px;
+}
+.popup_esc {
+	position: absolute;
+	right: 12px;
+	top: 6px;
+	font-size: 22px;
+	cursor: pointer;
+}
+.popup_caption {
+	font-size: 11px;
+	padding-bottom: 22px;
+	border-bottom: 1px solid #80808052;
+	padding: 0 42px 20px;
+}
+.popup_form p {
+	margin-bottom: 10px;
+	font-size: 14px;
+}
+.popup_form input[type="submit"] {
+	width: 50%;
+	background-color: #fdb900;
+	margin-left: auto;
+	cursor: pointer;
 }
